Got First Call To Api Working and Set Up Some Actions For List

--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ToDoApp:build"
+            "browserTarget": "ToDoApp:build",
+            "proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
